{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "DefaultInput",
            "id": "5e4aef4d-65f4-4463-aa92-5a53f1df54f8",
            "actions": [
                {
                    "name": "onPress",
                    "type": "PassThrough",
                    "id": "bb643e1e-3f2a-46a9-a818-8c75f6af1cbe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "c9e66706-f805-4dc4-922e-ac22422ddeec",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TurnLeft",
                    "type": "Button",
                    "id": "ce5965b1-1d76-434d-b4a6-bc076e8e35bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TurnRight",
                    "type": "Button",
                    "id": "8b6c7c20-f159-458c-9407-5c09e3bbc0f5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "e3c65e73-d853-48a0-bb97-1c4214db1ed8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SaveInventory",
                    "type": "Button",
                    "id": "566c74c1-4caa-4dca-8d02-f9699c0b1bd2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LoadInventory",
                    "type": "Button",
                    "id": "54efb69c-2191-4dbd-be85-72edb3a00a89",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenInventory",
                    "type": "Button",
                    "id": "b8ccf799-b1ea-4d19-89df-7cf363217217",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a5005c91-1ee8-49d9-b541-de424b4090f4",
                    "path": "<Pointer>/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "onPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "d06d571e-1834-4da8-a785-6e5fac2883e4",
                    "path": "2DVector",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c99f5382-a4b2-4163-a3ff-12f99e6f7285",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9e2876d1-cb0f-45a4-a774-ddcf236e80f7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ce8cece8-1059-41ea-8d64-decd46da887d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0242a56e-366f-43ca-b594-dbf7d2218ff9",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "85308527-e809-4998-9cfd-6f0ecec5d630",
                    "path": "<Keyboard>/q",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "TurnLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff777932-84fd-45d3-8932-a4e2eea70528",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "TurnRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d68a96d6-83b8-4a05-8fdf-7bd6bf3d0c16",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5f1c842-3cae-4132-aa01-13aff6fb22f8",
                    "path": "<Keyboard>/f5",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SaveInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b56897df-690e-4c67-99a1-ab065a99cf72",
                    "path": "<Keyboard>/f9",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "LoadInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4213aaae-65c9-4f4b-80bb-cd1fe2dc324d",
                    "path": "<Keyboard>/i",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "OpenInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}